# txtcode

./: .detect-secrets.cfg  .dockerignore  .env.example  .gitignore  .npmignore  .npmrc  .oxfmtrc.jsonc  .oxlintrc.json  .secrets.baseline  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  paji.py  pyproject.toml  requirements.txt  setup.py  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-publish.yml  lint.yml  release.yml  security.yml  test.yml
backend/: package.json
backend/src/: index.ts
backend/src/middleware/: auth.ts
backend/src/routes/: deployments.ts  models.ts
backend/src/services/: deployment.ts  huggingface.ts  queue.ts
benchx/: __init__.py  benchmark.py  cli.py  cost.py  fairness.py  hardware.py  metrics.py  prompt_generator.py  results.py  workload.py
benchx/docker/: .env.example  Dockerfile.sglang  Dockerfile.tensorrt  Dockerfile.vllm  docker-compose.405b.yml  docker-compose.prebuilt.yml  docker-compose.yml
benchx/engines/: __init__.py  base.py  mock_engine.py  sglang_engine.py  tensorrt_engine.py  vllm_engine.py
benchx/servers/: sglang_server.py  tensorrt_server.py  vllm_server.py
docs/: commands.md  configuration-files.md  discord-setup.md  routing.md  streaming-progress.md  switch-command.md
examples/: advanced_benchmark.py  basic_benchmark.py  cost_analysis.py  fairness_check.py
frontend/: package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  page.tsx.backup
frontend/src/components/: DeploymentConfig.tsx  DeploymentMonitor.tsx  Logo.tsx  ModelBrowser.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  socket.ts  supabase.ts
frontend/src/store/: deployment.ts
kiki/: README.md  __init__.py  layers.py
llm_engine/: __init__.py
llm_engine/core/: __init__.py  model.py  quantization.py  server.py
llm_engine/engines/: __init__.py  base.py  sglang.py  vllm.py
llm_engine/utils/: __init__.py  benchmark.py  config.py  hardware.py
scripts/: release.ps1  release.sh
servers/: vllm_server.py
src/: cli.ts
src/adapters/: base-adapter.ts  claude-code.ts  cursor-cli.ts  gemini-cli.ts  gemini-code.ts  kiro-cli.ts  ollama-claude-code.ts  openai-codex.ts  opencode.ts
src/ai/: processor.ts
src/cli/: index.ts
src/cli/commands/: agent.ts  auth.ts  config.ts  help.ts  interactive.ts  list-models.ts  logs.ts  reset.ts  start.ts  status.ts
src/cli/tui/: index.ts
src/commands/: agent.ts  auth.ts  config.ts  status.ts
src/config/: models-catalog.json
src/core/: agent.ts  context-manager.ts  context-prompt.ts  context-store.ts  router.ts
src/data/: anthropic_models.json  gemini_models.json  huggingface_models.json  mcp_servers.json  minimax_models.json  mistral_models.json  models-catalog.json  moonshot_models.json  openai_models.json  openrouter_models.json  primary_llm_system_prompt.txt  system-prompt.txt  xai_models.json  zai_models.json
src/ide/: bridge.ts
src/ide/adapters/: claude-code-spawn.ts  claude-code.ts  cursor.ts  (+4 more)
src/lib/: agent.ts  ide-bridge.ts
src/msg-platform/: discord.ts  telegram.ts  whatsapp.ts
src/providers/: anthropic.ts  deepseek.ts  gemini.ts  huggingface.ts  minimax.ts  mistral.ts  moonshot.ts  openai.ts  openrouter.ts  xai.ts  zai.ts
src/shared/: banner.ts  block-chunker.ts  block-reply-pipeline.ts  logger.ts  process-kill.ts  stream-normalizer.ts  streaming-types.ts  types.ts  typing-signaler.ts
src/tools/: cron.ts  env.ts  git.ts  http.ts  mcp-bridge.ts  mcp-sdk.ts  network.ts  process-registry.ts  process.ts  registry.ts  search.ts  sysinfo.ts  terminal.ts  types.ts
src/types/: index.ts
src/utils/: banner.ts  huggingface-discovery.ts  keychain.ts  mcp-catalog-loader.ts  model-discovery-util.ts  models-catalog-loader.ts
test/mocks/: fake-adapter.ts  fake-child-process.ts  fake-config.ts
test/unit/: adapters.test.ts  agent-commands.test.ts  base-adapter-helpers.test.ts  block-chunker.test.ts  block-reply-pipeline.test.ts  context-manager.test.ts  mcp-bridge.test.ts  mcp-catalog-loader.test.ts  mcp-registry.test.ts  router.test.ts  stream-normalizer.test.ts  typing-signaler.test.ts  zai-provider.test.ts
(+27 files in other folders)
