[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchx"
version = "0.1.0"
description = "Multi-environment CLI for comparing LLM inference engines (vLLM, SGLang, TensorRT-LLM)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "BenchX Team"}
]
keywords = ["llm", "inference", "benchmark", "vllm", "sglang", "tensorrt", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "psutil>=5.9.0",
    "requests>=2.28.0",
]

[project.scripts]
benchx = "benchx.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/IMvision12/benchx"
Documentation = "https://benchx.readthedocs.io"
Repository = "https://github.com/IMvision12/benchx"

[tool.setuptools.packages.find]
where = ["."]
include = ["benchx*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
